<?xml version="1.0" encoding="utf-8"?>
<resources> 
    <string name="app_name">企信通</string> 
    <string name="login_title">企信通登录设置</string>
    <string name="action_settings">Settings</string>
    <string name="save_checkbox">保存账户</string>
    <string name="login_btn">登录</string>
    <string name="reset_btn">重置</string>
    <string name="loginName">账户</string>
    <string name="password">密码</string> 
    <string name="remember_password">记住密码</string> 
    <string name="hide_login">隐身登录</string>
    <string name="auto_login">自动登录</string> 
    <string name="name">姓名:</string>
    <string name="depart">部门:</string>
    <string name="mobile">手机号:</string>
    <string name="phone">固定电话:</string>
     <string name="add_avator">头像</string>
    <string name="email">邮箱:</string> 
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="menu_contacts_add">添加联系人</string>
    <string name="menu_contacts_group_add">添加联系人分组</string>
    <string name="menu_contacts_group_rename">重命名联系人分组</string>
    <string name="menu_contacts_group_move">移动联系人分组</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="add">添加</string>
    <string name="save">保存</string> 
    <string name="group">分组</string>
    <string name="group_name">分组名称</string>
    <string name="company_name">公司名称</string>
    <string name="position">职位</string>
     <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="longclick_speak">长按说话</string>
    <string name="remark">备注</string> 
    <string name="move_to">移动到</string> 
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
  	<string name="pcontacts_info">联系人信息</string>  
  	<string name="my_folder">个人文件夹</string>
  	<string name="menu_contacts_modify">联系人修改</string> 
  	<!-- 登录提示 -->
    <string name="message_invalid_username_password">错误的用户名或密码</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
  	<!-- 网络和内存卡提示 -->
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
 	<string name="menu_settings">设置</string>
 	<string name="close">关闭</string>
	<string name="exit">退出</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<!-- 聊天记录 -->
	<string name="failedconnection">网络连接不可用，请检查网络设置</string>
	<string name="chat_exprot">导出</string>
    <string name="chat_delete">删除</string>
    <string name="chat_clear">清空</string> 
    <string name="chat_check_history">查看聊天记录</string>
    <string name="chat_his_with_sb">与%1$s的聊天记录</string>
    <!-- 我的消息 -->
    <string name="check_sys_msg">查看系统消息</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_user_confim">删除用户会将该用户所有聊天记录一并删除，是否继续?</string>
    <string name="new_message">收到新短消息</string>
    <!-- 添加好友 -->
    <string  name="input_username">输入用户名</string>
    <string  name="set_nickname">设置昵称</string>
    <string  name="username_not_null">用户名不允许为空</string>
    <string  name="username_exist">好友已存在</string>
    <!-- 系统消息列表 -->
    <string  name="at_the_last">已经到达最后一页</string>
    <!-- 首次登录向导 -->
    <string name="text1">随着Windows Phone逐步渗入中国智能手机市场，Windows Phone作为移动操作平台的新锐，自然不会失宠。Windows Phone 7在中国没有流行的原因，很大程度上是因为在中国并没有上市。现在，诺基亚和微软宣布达成紧密战略合作之后，沉寂许久的Windows Phone操作系统再次走入了人们关注的视野，成了移动应用开发者继iOS和Android之外的另一选择。</string>
    <string name="text2">好友曾向我展示了最新的iPhone和iPad版《极品飞车》。游戏的渲染效果令人印象深刻，是款蓄势待发的优秀游戏。但是，游戏的前端是典型的UI设计偏差案例。但界面中有大量的属性数据等内容，它在玩家没有时间做决定时提供了过多的内容。这些内容能够显著改变他们的游戏体验，但却在玩家往往感受不到变化的时候呈现。</string>
    <string name="text3">3月31日，第四届CocoaChina游戏开发者大会暨Cocos2D-X技术研讨会在北京举行。来自全世界的移动互联网精英在此交流经验、相互学习。同时这次我们有幸也采访到了CocoaChina的CEO陈昊芝先生。他将为我们揭秘苹果新榜单的算法秘密，并未我们带来捕鱼达人成功的推广经验，对微软Windows Phone平台的吐槽和对未来3D技术趋势的前瞻。</string>
    <string name="text4">北京时间4月1日消息，谷歌虽然一直以来都在地图产品上提供和完善各种各样的系统接口，但是迄今为止却一直忽略了广受欢迎的NES游戏。然而也就是今天搜索巨头谷歌利用愚人节的机会，“调皮”地推出流行的NES八位地图产品。</string>
    <string name="text5">在NASA和美国国家地理的参与下，这群小鸟摆脱了地球引力，跑到了太空，这就是即将在2012年3月22日公测的《愤怒的小鸟：太空版》。为了让小鸟们成功解救出它们珍贵的“无价之蛋”，美国国家地理为此出版了一本书，来提供完成任务所需的关于行星、卫星、银河系等关于外太空的知识，并将于3月20日开始发售。</string>
    <string name="text6">Google搜索引擎已经赢得全球范围的赞誉，而这一切都要归功于Google开创性的MapReduce。Google搜索引擎算法只是其搜索引擎的一部分，在后台支持Google算法的基础设施才是真正的幕后英雄，其基础设施可快速的索引链接成千上万台普通服务器。MapReduce的成功也直接推动了Hadoop的发展。</string>
    
    
    <!-- 缺省的服务器配置 --> 
    <integer name="xmpp_port">5222</integer> 
    <string name="xmpp_host">182.92.177.109</string>
    <string name="xmpp_service_name">gmail.com</string>
    <bool name="is_remember">true</bool>
    <bool name="is_autologin">false</bool>
    <bool name="is_novisible">false</bool> 
    
	<!-- 数据库和文件路径 -->
	<string name="dir">/eim</string>
	<string name="app_dir">/app</string>
	<string name="db_dir">/database</string>
	<string name="img_dir">/img</string>  
</resources>
