<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEFF" >

	 <RelativeLayout
	     android:id="@+id/re_head"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content" >

	     <ImageView
	         android:id="@+id/loginhead"
	         android:layout_width="wrap_content"
	         android:layout_height="50dip"
	         android:layout_centerInParent="true"
	         android:background="@drawable/skinpic_blue" />

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" 
	         android:layout_centerVertical="true"
	         android:layout_centerHorizontal="true"
	         android:text="@string/login_title"
	         android:textColor="@color/white"
	         android:textSize="20sp" />
	 </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_head"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/ui_username_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:inputType="text" 
            android:maxLength="16"
            android:maxLines="1"
            android:text="user2"
            android:paddingBottom="6.0dip"
            android:paddingLeft="50.0dip"
            android:paddingTop="6.0dip"
            android:textColor="#ff333333"
            android:textSize="18.0sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="15.0dip"
            android:paddingLeft="10.0dip"
            android:text="@string/loginName"
            
            android:textColor="#ff333333"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/ui_password_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text" 
            android:maxLength="16"
            android:maxLines="1" 
            android:text="123"
            android:paddingBottom="6.0dip"
            android:paddingLeft="50.0dip"
            android:paddingTop="6.0dip"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="18.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="15.0dip"
            android:paddingLeft="10.0dip"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/ui_login_btn"
        android:layout_width="100dip"
        android:layout_marginTop="10dip"
        android:layout_height="45dip"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:background="@drawable/button"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:button="@drawable/btn_check" 
        android:text="@string/remember_password"
        android:textColor="@color/black" 
        android:textSize="13sp"/>

    <CheckBox
        android:id="@+id/autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remember"
        android:layout_below="@+id/remember"
        android:button="@drawable/btn_check" 
        android:text="@string/auto_login"
        android:textColor="@color/black" 
        android:textSize="13sp"/>

    <CheckBox
        android:id="@+id/novisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remember"
        android:layout_below="@+id/autologin"
        android:button="@drawable/btn_check"
        android:text="@string/hide_login"
        android:textColor="@color/black" 
        android:textSize="13sp"/>

</RelativeLayout>